--- a/templates/base2.html
+++ b/templates/base2.html
@@ -69,7 +69,7 @@
             </div>
           </div>
           <div class="float-right">
-            <div class="make_appo"> <a class="btn white_btn" href="make_appointment.htmlt ">Make Appointment</a> </div>
+            <div class="make_appo"> <a class="btn white_btn" href="{% url 'make_appointment' %}">Make Appointment</a> </div>
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
           <!-- logo start -->
-          <div class="logo"> <a href="it_home.html"><img src="{% static 'images/logos/it_logo.png' %}" alt="logo" /></a> </div>
+          <div class="logo"> <a href="{% url 'it_home' %}"><img src="{% static 'images/logos/it_logo.png' %}" alt="logo" /></a> </div>
           <!-- logo end -->
         </div>
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -90,47 +90,47 @@
           <div class="menu_side">
             <div id="navbar_menu">
               <ul class="first-ul">
-                <li> <a class="active" href="it_home.html">Home</a>
+                <li> <a class="active" href="{% url 'it_home' %}">Home</a>
                   <ul>
-                    <li><a href="it_home.html">It Home Page</a></li>
-                    <li><a href="it_home_dark.html">It Dark Home Page</a></li>
+                    <li><a href="{% url 'it_home' %}">It Home Page</a></li>
+                    <li><a href="{% url 'it_home_dark' %}">It Dark Home Page</a></li>
                   </ul>
                 </li>
-                <li><a href="it_about.html">About Us</a></li>
-                <li> <a href="it_service.html">Service</a>
+                <li><a href="{% url 'it_about' %}">About Us</a></li>
+                <li> <a href="{% url 'it_service' %}">Service</a>
                   <ul>
-                    <li><a href="it_service_list.html">Services list</a></li>
-                    <li><a href="it_service_detail.html">Services Detail</a></li>
+                    <li><a href="{% url 'it_service_list' %}">Services list</a></li>
+                    <li><a href="{% url 'it_service_detail' %}">Services Detail</a></li>
                   </ul>
                 </li>
-                <li> <a href="it_blog.html">Blog</a>
+                <li> <a href="{% url 'it_blog' %}">Blog</a>
                   <ul>
-                    <li><a href="it_blog.html">Blog List</a></li>
-                    <li><a href="it_blog_grid.html">Blog Grid</a></li>
-                    <li><a href="it_blog_detail.html">Blog Detail</a></li>
+                    <li><a href="{% url 'it_blog' %}">Blog List</a></li>
+                    <li><a href="{% url 'it_blog_grid' %}">Blog Grid</a></li>
+                    <li><a href="{% url 'it_blog_detail' %}">Blog Detail</a></li>
                   </ul>
                 </li>
                 <li> <a href="#">Pages</a>
                   <ul>
-                    <li><a href="it_career.html">Career</a></li>
-                    <li><a href="it_price.html">Pricing</a></li>
-                    <li><a href="it_faq.html">Faq</a></li>
-                    <li><a href="it_privacy_policy.html">Privacy Policy</a></li>
-                    <li><a href="it_error.html">Error 404</a></li>
+                    <li><a href="{% url 'it_career' %}">Career</a></li>
+                    <li><a href="{% url 'it_price' %}">Pricing</a></li>
+                    <li><a href="{% url 'it_faq' %}">Faq</a></li>
+                    <li><a href="{% url 'it_privacy_policy' %}">Privacy Policy</a></li>
+                    <li><a href="{% url 'it_error' %}">Error 404</a></li>
                   </ul>
                 </li>
-                <li> <a href="it_shop.html">Shop</a>
+                <li> <a href="{% url 'it_shop' %}">Shop</a>
                   <ul>
-                    <li><a href="it_shop.html">Shop List</a></li>
-                    <li><a href="it_shop_detail.html">Shop Detail</a></li>
-                    <li><a href="it_cart.html">Shopping Cart</a></li>
-                    <li><a href="it_checkout.html">Checkout</a></li>
+                    <li><a href="{% url 'it_shop' %}">Shop List</a></li>
+                    <li><a href="{% url 'it_shop_detail' %}">Shop Detail</a></li>
+                    <li><a href="{% url 'it_cart' %}">Shopping Cart</a></li>
+                    <li><a href="{% url 'it_checkout' %}">Checkout</a></li>
                   </ul>
                 </li>
-                <li> <a href="it_contact.html">Contact</a>
+                <li> <a href="{% url 'it_contact' %}">Contact</a>
                   <ul>
-                    <li><a href="it_contact.html">Contact Page 1</a></li>
-                    <li><a href="it_contact_2.html">Contact Page 2</a></li>
+                    <li><a href="{% url 'it_contact' %}">Contact Page 1</a></li>
+                    <li><a href="{% url 'it_contact_2' %}">Contact Page 2</a></li>
                   </ul>
                 </li>
               </ul>
@@ -179,11 +179,11 @@
               <h2>Additional links</h2>
             </div>
             <ul class="footer-menu">
-              <li><a href="it_about.html"><i class="fa fa-angle-right"></i> About us</a></li>
-              <li><a href="it_term_condition.html"><i class="fa fa-angle-right"></i> Terms and conditions</a></li>
-              <li><a href="it_privacy_policy.html"><i class="fa fa-angle-right"></i> Privacy policy</a></li>
-              <li><a href="it_news.html"><i class="fa fa-angle-right"></i> News</a></li>
-              <li><a href="it_contact.html"><i class="fa fa-angle-right"></i> Contact us</a></li>
+              <li><a href="{% 'it_about' %}"><i class="fa fa-angle-right"></i> About us</a></li>
+              <li><a href="{% 'it_term_condition' %}"><i class="fa fa-angle-right"></i> Terms and conditions</a></li>
+              <li><a href="{% 'it_privacy_policy' %}"><i class="fa fa-angle-right"></i> Privacy policy</a></li>
+              <li><a href="{% 'it_news' %}"><i class="fa fa-angle-right"></i> News</a></li>
+              <li><a href="{% 'it_contact' %}"><i class="fa fa-angle-right"></i> Contact us</a></li>
             </ul>
           </div>
           <div class="col-md-6">
@@ -191,11 +191,11 @@
               <h2>Services</h2>
             </div>
             <ul class="footer-menu">
-              <li><a href="it_data_recovery.html"><i class="fa fa-angle-right"></i> Data recovery</a></li>
-              <li><a href="it_computer_repair.html"><i class="fa fa-angle-right"></i> Computer repair</a></li>
-              <li><a href="it_mobile_service.html"><i class="fa fa-angle-right"></i> Mobile service</a></li>
-              <li><a href="it_network_solution.html"><i class="fa fa-angle-right"></i> Network solutions</a></li>
-              <li><a href="it_techn_support.html"><i class="fa fa-angle-right"></i> Technical support</a></li>
+              <li><a href="{% 'it_data_recovery' %}"><i class="fa fa-angle-right"></i> Data recovery</a></li>
+              <li><a href="{% 'it_computer_repair' %}"><i class="fa fa-angle-right"></i> Computer repair</a></li>
+              <li><a href="{% 'it_mobile_service' %}"><i class="fa fa-angle-right"></i> Mobile service</a></li>
+              <li><a href="{% 'it_network_solution' %}"><i class="fa fa-angle-right"></i> Network solutions</a></li>
+              <li><a href="{% 'it_techn_support' %}"><i class="fa fa-angle-right"></i> Technical support</a></li>
             </ul>
           </div>
           <div class="col-md-6">
