--- a/itservice/templates/itservice/it_contact.html
+++ b/itservice/templates/itservice/it_contact.html
@@ -104,7 +104,7 @@
                     <div class="field col-lg-12 col-md-12 col-sm-12 col-xs-12">
                       {{ form_for_temp.message }}
                     </div>
-                    <div class="center"><button type="submit"><a class="btn main_bt" >SUBMIT NOW</a></div>
+                    <div class="center"><button type="submit"><a class="btn main_bt" >SUBMIT</a></div>
                   </div>
                   </fieldset>
                 </form>
