--- a/templates/base2.html
+++ b/templates/base2.html
@@ -129,8 +129,7 @@
                 </li>
                 <li> <a href="{% url 'it_contact' %}">Contact</a>
                   <ul>
-                    <li><a href="{% url 'it_contact' %}">Contact Page 1</a></li>
-                    <li><a href="{% url 'it_contact_2' %}">Contact Page 2</a></li>
+                    <li><a href="{% url 'it_contact' %}">Contact Page</a></li>
                   </ul>
                 </li>
               </ul>
